hphp/test/zend/good/ext/gd/tests/bug48555.php.skipif
<?php
	if(!extension_loaded('gd')){ die('skip gd extension not available'); }
	if(!function_exists('imageftbbox')) die('skip imageftbbox() not available');
?>